# Seminario-GTest

./: .gitignore  CMakeLists.txt  README.md  Seminario-GTest.sln  Seminario-GTest.vcxproj  character.cpp  character.h  item.cpp  item.h  test.cpp
.github/workflows/: ci.yml
Debug/: Seminario-GTest.ilk
Seminario-GTest/Debug/: Seminario-GTest.exe.recipe  Seminario-GTest.vcxproj.FileListAbsolute.txt
Seminario-GTest/Debug/Seminario-GTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Seminario-GTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Seminario-GTest/x64/Debug/: Seminario-GTest.exe.recipe  Seminario-GTest.vcxproj.FileListAbsolute.txt
Seminario-GTest/x64/Debug/Seminario-GTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Seminario-GTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: CMakeLists.txt
